--- a/style.css
+++ b/style.css
@@ -8,12 +8,17 @@ body {
   margin: 0;
   color: #141616;
   background-color: #e6e9ea;
-  font-size: 28px;
 }
 
 h1 {
-  font-size: 110px;
+  font-size: 7rem;
   margin-bottom: 1rem;
+  font-family: 'Roboto', sans-serif;
+}
+
+p {
+  font-size: 1.8rem;
+  font-family: 'Lato', sans-serif;
 }
 
 .full-screen-section {
